# uv_with_github

fun_fact_city/: fun_fact.txt  pyproject.toml
fun_fact_city/src/fun_fact_city/: __init__.py  fun_fact_city.py
router/router/: crewai_flow.html  pyproject.toml
router/router/src/router/: city_or_country.py
router_decorator/: .env  pyproject.toml
router_decorator/src/router_decorator/: __init__.py  router.py
