[project]
name = "router-decorator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "owaisyosuf", email = "owais.251990@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "crewai>=0.102.0",
    "litellm>=1.60.2",
]

[project.scripts]
router-decorator = "router_decorator:main"
router="router_decorator.router:kickoff"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
