[project]
name = "router"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "owaisyosuf", email = "owais.251990@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "crewai>=0.102.0",
    "crewai-tools>=0.36.0",
]

[project.scripts]
router = "router:main"
piaic="router.city_or_country:kickoff"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
